--- a/index.html
+++ b/index.html
@@ -15,5 +15,50 @@
         <div class="box-item">5</div>
         <div class="box-item">6</div>
     </div>
+    <hr>
+    <hr>
+    <hr>
+    <div class="food-item-container">
+        <div class="food-item">
+            <img src="https://images.indianexpress.com/2023/12/food.jpg" alt="">
+            <h4>Food 1</h4>
+            <h6>Price: 10$</h6>
+        </div>
+        <div class="food-item">
+            <img src="https://images.indianexpress.com/2023/12/food.jpg" alt="">
+            <h4>Food 1</h4>
+            <h6>Price: 10$</h6>
+        </div>
+        <div class="food-item">
+            <img src="https://images.indianexpress.com/2023/12/food.jpg" alt="">
+            <h4>Food 1</h4>
+            <h6>Price: 10$</h6>
+        </div>
+        <div class="food-item">
+            <img src="https://images.indianexpress.com/2023/12/food.jpg" alt="">
+            <h4>Food 1</h4>
+            <h6>Price: 10$</h6>
+        </div>
+        <div class="food-item">
+            <img src="https://images.indianexpress.com/2023/12/food.jpg" alt="">
+            <h4>Food 1</h4>
+            <h6>Price: 10$</h6>
+        </div>
+        <div class="food-item">
+            <img src="https://images.indianexpress.com/2023/12/food.jpg" alt="">
+            <h4>Food 1</h4>
+            <h6>Price: 10$</h6>
+        </div>
+        <div class="food-item">
+            <img src="https://images.indianexpress.com/2023/12/food.jpg" alt="">
+            <h4>Food 1</h4>
+            <h6>Price: 10$</h6>
+        </div>
+        <div class="food-item">
+            <img src="https://images.indianexpress.com/2023/12/food.jpg" alt="">
+            <h4>Food 1</h4>
+            <h6>Price: 10$</h6>
+        </div>
+    </div>
 </body>
 </html>
